<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/p_task_fragment_scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/p_task_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:padding="@dimen/activity_margin">

        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/task_title_label"
            android:textColor="@color/BlueA700" />

        <EditText
            android:id="@+id/p_task_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/task_title_hint"
            android:textSize="30sp" />

        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/task_details_label"
            android:textColor="@color/BlueA700" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/p_task_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:drawableLeft="@drawable/ic_tab_calendar" />

            <Button
                android:id="@+id/p_task_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:drawableLeft="@drawable/ic_tab_time" />
        </LinearLayout>

        <Button
            android:id="@+id/p_task_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_tab_location"
            android:text="@string/task_location_text" />

        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/task_assignee_label"
            android:textColor="@color/BlueA700" />

        <Spinner
            android:id="@+id/assignee_spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/SpinnerResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/p_task_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="@color/BlueA400"
            android:text="@string/task_save"
            android:textColor="@android:color/white" />

    </LinearLayout>
</ScrollView>
